base/app-freshrss.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
spec:
  tls:
  - secretName: freshrss-certs
    hosts:
    - freshrss.kotimme.cc
  rules:
  - host: freshrss.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port:
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  labels:
    app: freshrss
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: freshrss
  type: NodePort

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss
  labels:
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  serviceName: "freshrss"
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      securityContext:
        fsGroup: 1978
#      imagePullSecrets:
#        - name: docker-hub
      containers:
      - name: freshrss
        image: freshrss/freshrss
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: pvc-nfs
          mountPath: /var/www/FreshRSS/data
          subPath: freshrss/data
        - name: pvc-nfs
          mountPath: /var/www/FreshRSS/extensions
          subPath: freshrss/extensions

      - name: postgres
        image: postgres:17-bookworm
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: pvc-nfs
          mountPath: /var/lib/postgresql/data
          subPath: freshrss/postgres

      volumes:
        - name: pvc-nfs
          persistentVolumeClaim:
           claimName: nfs
